[package]
name = "kybe-cli"
version = "0.0.1"
edition = "2024"

[[bin]]
name = "kcli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
anyhow = "1.0.100"
thiserror = "2.0.17"
clap_generate = "3.0.3"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.11"
directories = "6.0.0"
chrono = { version = "0.4.43", features = ["serde"] }
parking_lot = "0.12.5"
ctrlc = "3.5.1"
